<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:background="@color/appbar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/rof_backbutton"
            android:gravity="center"
            android:textStyle="bold"
            android:scaleType="center"
            android:id="@+id/back_activity_button1"
            android:tint="@color/white"
            android:layout_gravity="start"
            android:paddingLeft="10dp"


            />

        <LinearLayout
            android:id="@+id/saveshipmenticonintop"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="@color/appbar"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:padding="@dimen/pin_content_layout_padding">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:tint="@color/white"
                android:paddingBottom="0dp"/>

        </LinearLayout>
        <TextView
            android:layout_centerInParent="true"
            android:layout_height="match_parent"
            android:layout_width="fill_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Add Bank Account"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/title"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsbold"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textbox"
                android:text="Please enter your Bank Account  details to link with the app"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                style="@style/commonSubTitelStyle"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="7dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/accountno"
                    android:backgroundTint="@color/white"
                    android:hint="Account Number"
                    android:singleLine="true"
                    android:id="@+id/acno"
                    android:maxLength="32"
                    android:inputType="number"
                    android:maxLines="1"
                    android:digits="@string/AccountNumerDigits"
                    style="@style/commonEdittextStyle"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="7dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                >
                <EditText
                    android:id="@+id/bankname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ifsc"
                    android:backgroundTint="@color/white"
                    android:hint="Bank"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:inputType="number"
                    android:maxLines="1"
                    android:digits="@string/AccountNumerDigits"
                    style="@style/commonEdittextStyle"
                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="7dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                >

                <Spinner
                    android:id="@+id/account_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"

                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="7dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/usericon"
                    android:backgroundTint="@color/white"
                    android:hint="Account Holder Name"
                    android:singleLine="true"
                    android:id="@+id/acholdername"
                    android:maxLength="32"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:digits="@string/NameDigits"
                    style="@style/commonEdittextStyle"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="7dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                >
                <com.uav.autodebit.override.UAVEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/amount"
                    android:backgroundTint="@color/white"
                    android:hint="Min Amount"
                    android:singleLine="true"
                    android:id="@+id/maxamount"
                    android:maxLength="10"
                    android:text=""
                    android:digits="@string/NumberDigits"
                    android:maxLines="1"
                    android:inputType="number|textVisiblePassword"
                    style="@style/commonEdittextStyle"
                    />
            </androidx.cardview.widget.CardView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mandatebtn"
                android:text="verify"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/cornerbutton"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>